# Secure-Notes-Organizer

./: Readme.md
ClientController/: CMakeLists.txt  CMakeLists.txt.user.4921478  CMakeLists.txt.user.93fee25  CMakeLists.txt.user.d385bc6  Note.cpp  Tag.h  User.h  clientconnection.cpp  clientconnection.h  clientcontroller.h  main.cpp
Gtest/ClientControllerForGtest/: NoteComponent.h  User.cpp  controller_main.cpp  userController.cpp
Gtest/Photos/: ServerTerminal
Gtest/TestCasesImplementation/: User.h  controller_main.cpp  userController.h
Server/Data Controller/: DataController.cpp  DataController.h  Note.cpp  Note.h  NoteComponent.cpp  NoteComponent.h  Tag.cpp  Tag.h  User.cpp  User.h  main.cpp  makefile
Server/Database/: Db.sql
Server/ServerWithDataController/: DataController.cpp  DataController.h  ParseJsonMesssge.cpp  ParseJsonMesssge.h  Server  ServerWithDC.cpp  ServerWithDC.h  Tag.h  server_main.cpp
Server_with_cmake/Server/: CMakeLists.txt
Server_with_cmake/Server/include/Connection/: Connection.h
Server_with_cmake/Server/include/DataController/: DataController.h
Server_with_cmake/Server/include/Note/: Note.h
Server_with_cmake/Server/include/ServerWithDC/: ServerWithDC.h
Server_with_cmake/Server/include/Tag/: Tag.h
Server_with_cmake/Server/src/Connection/: Connection.cpp
Server_with_cmake/Server/src/NoteComponent/: NoteComponent.cpp
Server_with_cmake/Server/src/ParseJsonMesssge/: ParseJsonMesssge.cpp
Server_with_cmake/Server/src/Tag/: Tag.cpp
build-secure-notes-ogranizer-Desktop_Qt_6_6_0_GCC_64bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake  secure-notes-ogranizer
build-secure-notes-ogranizer-Desktop_Qt_6_6_0_GCC_64bit-Release/.qt/: QtDeploySupport.cmake
build-secure-notes-ogranizer-Desktop_Qt_6_6_0_GCC_64bit-Release/.qtc_clangd/: compile_commands.json
build-secure-notes-ogranizer-Desktop_Qt_6_6_0_GCC_64bit-Release/config.tests/static_link_order/: CMakeCache.txt  Makefile  cmake_install.cmake
build-secure-notes-ogranizer-Desktop_Qt_6_6_0_GCC_64bit-Release/secure-notes-ogranizer_autogen/: mocs_compilation.cpp
build-secure-notes-ogranizer-Desktop_Qt_6_6_0_GCC_64bit-Release/secure-notes-ogranizer_autogen/EWIEGA46WW/: moc_add_note_dialog.cpp  moc_button_icon_vlayout.cpp  moc_clickable_label.cpp  moc_component.cpp  moc_custom_widget.cpp  moc_dropdown_label.cpp  moc_img_msg_vlayout.cpp  moc_label_input_vlayout.cpp  moc_main_window.cpp  moc_note_widget.cpp  moc_profile_dialog.cpp  moc_round_img_label.cpp  moc_show_notes_vlayout.cpp  moc_sidebar_vlayout.cpp  moc_signin.cpp  moc_signout.cpp  moc_signup.cpp  moc_switcher_widget.cpp  moc_tag_widget.cpp  moc_tags_hlayout.cpp  moc_textedit_template.cpp  qrc_res.cpp
implementation/build-secure-notes-ogranizer-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
implementation/build-secure-notes-ogranizer-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
implementation/build-secure-notes-ogranizer-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
implementation/build-secure-notes-ogranizer-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/secure-notes-ogranizer_autogen/: deps  mocs_compilation.cpp
implementation/build-secure-notes-ogranizer-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/secure-notes-ogranizer_autogen/EWIEGA46WW/: moc_add_note_dialog.cpp  moc_add_note_dialog.cpp.d  moc_button_icon_vlayout.cpp  moc_button_icon_vlayout.cpp.d  moc_clickable_label.cpp  moc_clickable_label.cpp.d  moc_component.cpp  moc_component.cpp.d  moc_custom_widget.cpp  moc_custom_widget.cpp.d  moc_dropdown_label.cpp  moc_dropdown_label.cpp.d  moc_img_msg_vlayout.cpp  moc_img_msg_vlayout.cpp.d  (+27 more)
implementation/secure-notes-ogranizer/: CMakeLists.txt  CMakeLists.txt.user.805f117  add_note_dialog.cpp  add_note_dialog.h  button_icon_vlayout.cpp  button_icon_vlayout.h  clickable_label.cpp  component.cpp  component.h  constants.cpp  constants.h  custom_widget.cpp  custom_widget.h  dropdown_label.cpp  dropdown_label.h  edit_notes_vlayout.cpp  edit_notes_vlayout.h  label_input_vlayout.h  main.cpp  main_window.cpp  main_window.h  note_editor.cpp  note_editor.h  note_widget.cpp  note_widget.h  profile_dialog.cpp  res.qrc  round_img_label.cpp  show_notes_vlayout.h  sidebar_vlayout.cpp  sidebar_vlayout.h  signin.cpp  signin.h  signout.cpp  signup.cpp  signup.h  switcher_widget.cpp  switcher_widget.h  tag.cpp  tag.h  (+6 more)
implementation/secure-notes-ogranizer/styles/: styles.qss
secure-notes-ogranizer/: CMakeLists.txt  CMakeLists.txt.user.0b5ff1e  CMakeLists.txt.user.994ec18  add_note_dialog.cpp  add_note_dialog.h  button_icon_vlayout.cpp  button_icon_vlayout.h  clickable_label.h  component.cpp  component.h  constants.cpp  constants.h  custom_widget.cpp  custom_widget.h  img_msg_vlayout.cpp  img_msg_vlayout.h  label_input_vlayout.cpp  main.cpp  main_window.cpp  main_window.h  note_editor.cpp  note_editor.h  note_widget.cpp  note_widget.h  profile_dialog.cpp  profile_dialog.h  res.qrc  round_img_label.h  show_notes_vlayout.cpp  show_notes_vlayout.h  sidebar_vlayout.cpp  sidebar_vlayout.h  signin.cpp  signin.h  signout.cpp  signout.h  signup.cpp  signup.h  tag_widget.cpp  tag_widget.h  (+4 more)
secure-notes-ogranizer/back-end/: Note.h  NoteComponent.cpp  NoteComponent.h  Tag.h  User.cpp  User.h  clientconnection.h  clientcontroller.cpp  clientcontroller.h
secure-notes-ogranizer/styles/: styles.qss
(+1401 files in other folders)
